fix: alignment on actual bar

--- a/frontend/src/static/css/main.css
+++ b/frontend/src/static/css/main.css
@@ -13,7 +13,7 @@ body {
     display: flex;
     flex-flow: row wrap;
     width: 100%;
-    height: 98vh;
+    height: 100vh;
 }
 
 .info-container {
@@ -48,11 +48,10 @@ body {
 .actual-bar {
     width: 8px;
     height: 20px;
-    padding: 0;
     background-color: #7a899e;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    margin: 10px 0 0 0;
+    margin: 10px 0;
     transition: height 1s  ease-in-out;
 }
 
@@ -61,6 +60,7 @@ body {
     background-color: #354f52;
     transition: height .6s  ease-in-out;
     border-radius: 10px;
+    padding:0;
 }
 
 .output {
